c/examples/writing-a-c-compiler-tests/tests/chapter_6/valid/ternary_short_circuit.c
int main(void) {
    int a = 1;
    int b = 0;
    a ? (b = 1) : (b = 2);
    return b;
}