c/examples/writing-a-c-compiler-tests/tests/chapter_6/invalid_semantics/ternary_assign.c
int main(void) {
    int a = 2;
    int b = 1;
    a > b ? a = 1 : a = 0;
    return a;
}